--- a/What's new in 1.0.ipynb
+++ b/What's new in 1.0.ipynb
@@ -544,12 +544,60 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "nbconvert"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "!ipython nbconvert --to html \"What's new in 1.0\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[NbConvertApp] Using existing profile dir: u'/Users/minrk/.ipython/profile_default'\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[NbConvertApp] Converting notebook What's new in 1.0.ipynb to html\r\n",
+        "[NbConvertApp] Support files will be in What's new in 1.0_files/\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[NbConvertApp] Loaded template html_full.tpl\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[NbConvertApp] Writing 282948 bytes to What's new in 1.0.html\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[static html output](files/What's%20new%20in%201.0.html)\n"
+     ]
     }
    ],
    "metadata": {}
